# code-streak-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: generate-dashboard.yml
src/code_streak_dashboard/: __init__.py  __main__.py  github_api.py  metrics.py  scanner.py  svg.py
tests/: test_metrics.py  test_scanner.py  test_svg.py
